--- a/PY0101EN-1-2-Strings.ipynb
+++ b/PY0101EN-1-2-Strings.ipynb
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -945,6 +945,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      " Michael Jackson \\ is the best\n",
       " Michael Jackson \\ is the best\n"
      ]
     }
@@ -952,7 +953,8 @@
    "source": [
     "# r will tell python that string will be display as raw string\n",
     "\n",
-    "print(r\" Michael Jackson \\ is the best\" )"
+    "print(r\" Michael Jackson \\ is the best\" )\n",
+    "print(\" Michael Jackson \\ is the best\" )"
    ]
   },
   {
@@ -1020,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1034,7 +1036,7 @@
        "'Janet Jackson is the best'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1168,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
